# game-of-life

./: .gitignore  CMakeLists.txt  README.md
include/: screen.hpp  screens.hpp
include/screens/: gol.hpp
src/: gol.cpp  main.cpp
